# bronzebullballs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bronzebullballs/: __init__.py  __main__.py  log.py
src/bronzebullballs/adapters/: __init__.py  earnings_calendar.py  market_data.py  protocols.py  universe.py
src/bronzebullballs/domain/: __init__.py  indicators.py  regime.py  scores.py  sector_cap.py  signals.py  sizing.py
src/bronzebullballs/entrypoints/: __init__.py  cli.py
src/bronzebullballs/report/: __init__.py
src/bronzebullballs/service_layer/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_version.py
tests/unit/: __init__.py  test_indicators.py  test_regime.py  test_scores.py  test_sector_cap.py  test_signals.py  test_sizing.py
