[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bronzebullballs"
version = "0.1.0"
description = "Walk-forward validation + S&P 500 screening CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yahooquery>=2.3.7",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "types-colorama>=0.4",
    "pandas-stubs>=2.2",
]

[project.scripts]
bronzebullballs = "bronzebullballs.entrypoints.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bronzebullballs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/bronzebullballs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "yahooquery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bronzebullballs.domain.*"
strict = true
